first pass at invite endpoint
